--- a/UI/codepulse/src/app/features/category/category-list/category-list.component.html
+++ b/UI/codepulse/src/app/features/category/category-list/category-list.component.html
@@ -11,6 +11,7 @@
             <th>Id</th>
             <th>Name</th>
             <th>Url Handle</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -18,6 +19,9 @@
             <td>{{ category.id }}</td>
             <td>{{ category.name }}</td>
             <td>{{ category.urlHandle }}</td>
+            <td>
+              <a [routerLink]="['/admin/categories', category.id]" class="btn btn-light">Edit</a>
+            </td>
           </tr>
         </tbody>
       </table>
