--- a/UI/codepulse/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
+++ b/UI/codepulse/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
@@ -5,5 +5,29 @@
     <a [routerLink]="['/admin/blogposts/add']" class="btn btn-primary">Add BlogPost</a>
   </div>
 
+  <ng-container *ngIf="blogPosts$ | async as blogPosts">
+    <table class="table table-bordered mt-3">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Short Description</th>
+          <th>Is Visible</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let blogPost of blogPosts">
+          <td>{{ blogPost.title }}</td>
+          <td>{{ blogPost.shortDescription }}</td>
+          <td>{{ blogPost.isVisible }}</td>
+
+          <td>
+            <a [routerLink]="['/admin/blogposts', blogPost.id]" class="btn btn-light">Edit</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+</ng-container>
+
 
 </div>
