--- a/UI/codepulse/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/UI/codepulse/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -20,7 +20,17 @@
 
       <div class="mt-3">
         <label for="content" class="form-label">Content</label>
-        <textarea class="form-control" id="content" name="content" [(ngModel)]="model.content"></textarea>
+       
+        <div class="d-flex flex-row">
+           <div class="col-6 p-2">
+            <textarea class="form-control" id="content" name="content" style="height: 350px; max-height: 350px;" [(ngModel)]="model.content"></textarea>
+           </div>
+           
+           <div class="col-6 p-2" style="max-height: 350px; overflow-y: scroll;">
+              <markdown [data]="model.content"></markdown>
+           </div>
+
+        </div>
       </div>
 
       <div class="mt-3">
