--- a/UI/codepulse/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/UI/codepulse/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -35,6 +35,13 @@
 
       <div class="mt-3">
         <label for="featuredImageUrl" class="form-label">Featured Image Url</label>
+          
+        <ng-container *ngIf="model.featuredImageUrl != ''">
+          <div>
+            <img [src]="model.featuredImageUrl" class="my-2" height="100">
+          </div>
+       </ng-container>
+
         <input type="text" class="form-control" id="featuredImageUrl" name="featuredImageUrl" [(ngModel)]="model.featuredImageUrl">
       </div>
 
