--- a/UI/codepulse/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/UI/codepulse/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -65,6 +65,17 @@
       </div>
 
       <div class="mt-3">
+        <label for="categories" class="form-label">Categories</label>
+
+        <ng-container *ngIf="categories$ | async as categories">
+          <select class="form-control" id="categories" name="categories" multiple >
+           <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
+          </select>
+        </ng-container>
+
+      </div>
+
+      <div class="mt-3">
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
 
