--- a/UI/codepulse/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
+++ b/UI/codepulse/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
@@ -12,6 +12,7 @@
           <th>Title</th>
           <th>Short Description</th>
           <th>Is Visible</th>
+          <th>Categories</th>
           <th></th>
         </tr>
       </thead>
@@ -20,7 +21,11 @@
           <td>{{ blogPost.title }}</td>
           <td>{{ blogPost.shortDescription }}</td>
           <td>{{ blogPost.isVisible }}</td>
-
+          <td>
+            <span *ngFor="let category of blogPost.categories">
+              <span class="badge bg-secondary me-2">{{category.name}}</span>
+            </span> 
+          </td>
           <td>
             <a [routerLink]="['/admin/blogposts', blogPost.id]" class="btn btn-light">Edit</a>
           </td>
