Submit Categories When Adding BlogPost UI

--- a/UI/codepulse/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/UI/codepulse/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -68,7 +68,7 @@
         <label for="categories" class="form-label">Categories</label>
 
         <ng-container *ngIf="categories$ | async as categories">
-          <select class="form-control" id="categories" name="categories" multiple >
+          <select class="form-control" id="categories" name="categories" multiple [(ngModel)]="model.categories">
            <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
           </select>
         </ng-container>
