--- a/UI/codepulse/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
+++ b/UI/codepulse/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
@@ -84,7 +84,7 @@
         </div>
 
                 <div class="mt-3">
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Update Blog</button>
                 </div>
 
 
