--- a/UI/codepulse/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
+++ b/UI/codepulse/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
@@ -83,8 +83,9 @@
   
         </div>
 
-                <div class="mt-3">
+                <div class="mt-3 d-flex">
                     <button type="submit" class="btn btn-primary">Update Blog</button>
+                    <button class="btn btn-danger ms-3"  (click)="onDelete()">Delete</button>
                 </div>
 
 
