--- a/UI/codepulse/src/app/shared/components/image-selector/image-selector.component.html
+++ b/UI/codepulse/src/app/shared/components/image-selector/image-selector.component.html
@@ -11,17 +11,17 @@
         <div class="col-4 p-4" bg-light>
             <h5>Upload Image</h5>
 
-            <form>
+            <form #form="ngForm" (ngSubmit)="uploadImage()">
                 <div class="mt-3">
-                    <input type="file" class="form-control">
+                    <input type="file" class="form-control custom-file-input" (change)="onFileUploadChange($event)">
                 </div>
 
                 <div class="mt-3">
-                    <input type="text" class="form-control" placeholder="File Name" name="fileName">
+                    <input type="text" class="form-control" placeholder="File Name" name="fileName" [(ngModel)]="fileName">
                 </div>
 
                 <div class="mt-3">
-                    <input type="text" class="form-control" placeholder="Title" name="title">
+                    <input type="text" class="form-control" placeholder="Title" name="title" [(ngModel)]="title">
                 </div>
 
                 <div class="mt-3">
