--- a/UI/codepulse/src/app/shared/components/image-selector/image-selector.component.html
+++ b/UI/codepulse/src/app/shared/components/image-selector/image-selector.component.html
@@ -5,9 +5,20 @@
 
   <div class="card-body">
     <div class="d-flex flex-md-row flex-sm-column flex-wrap">
-        <div class="col-8 p-4">
-
+        <div class="col-8 p-4" style="overflow-y: scroll;">
+            <ng-container *ngIf="images$ | async as images">
+                <div class="d-flex d-wrap">
+                  <div *ngFor="let image of images"
+                        style="min-width: 100px; justify-content: center; cursor: pointer;"
+                        class="d-flex me-1 bg-white align-items-center flex-column border p-3">
+                    <img [src]="image.url" [title]="image.title" style="height: 100px;">
+                    <span class="mt-1">{{image.title}}</span>
+                  </div>
+                </div>
+             </ng-container>
         </div>
+
+
         <div class="col-4 p-4" bg-light>
             <h5>Upload Image</h5>
 
