--- a/UI/codepulse/src/app/shared/components/image-selector/image-selector.component.html
+++ b/UI/codepulse/src/app/shared/components/image-selector/image-selector.component.html
@@ -9,6 +9,7 @@
             <ng-container *ngIf="images$ | async as images">
                 <div class="d-flex d-wrap">
                   <div *ngFor="let image of images"
+                        (click)="selectImage(image)"
                         style="min-width: 100px; justify-content: center; cursor: pointer;"
                         class="d-flex me-1 bg-white align-items-center flex-column border p-3">
                     <img [src]="image.url" [title]="image.title" style="height: 100px;">
