--- a/UI/codepulse/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
+++ b/UI/codepulse/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
@@ -1,33 +1,33 @@
-<div class="container">
-    <h1 class="mt-3">Edit BlogPost</h1>
+<div class="container cool-container">
+    <h1 class="mt-3 cool-title">Edit BlogPost</h1>
 
     <ng-container *ngIf="model">
 
-        <form #form="ngForm" (ngSubmit)="onFormSubmit()">
+        <form #form="ngForm" (ngSubmit)="onFormSubmit()" class="cool-form">
             <div class="mt-2 mb-5">
                 <div class="mt-3">
-                    <label for="title" class="form-label">Title</label>
-                    <input type="text" class="form-control" id="title" name="title" [(ngModel)]="model.title">
+                    <label for="title" class="form-label cool-label">Title</label>
+                    <input type="text" class="form-control cool-input" id="title" name="title" [(ngModel)]="model.title">
                 </div>
 
                 <div class="mt-3">
-                    <label for="urlHandle" class="form-label">Url Handle</label>
-                    <input type="text" class="form-control" id="urlHandle" name="urlHandle"
+                    <label for="urlHandle" class="form-label cool-label">Url Handle</label>
+                    <input type="text" class="form-control cool-input" id="urlHandle" name="urlHandle"
                         [(ngModel)]="model.urlHandle">
                 </div>
 
                 <div class="mt-3">
-                    <label for="shortDescription" class="form-label">Short Description</label>
-                    <input type="text" class="form-control" id="shortDescription" name="shortDescription"
-                        [(ngModel)]="model.shortDescription">
+                    <label for="shortDescription" class="form-label cool-label">Short Description</label>
+                    <textarea class="form-control cool-input" id="shortDescription" name="shortDescription"
+                        [(ngModel)]="model.shortDescription" rows="5"></textarea>
                 </div>
 
                 <div class="mt-3">
-                    <label for="content" class="form-label">Content</label>
+                    <label for="content" class="form-label cool-label">Content</label>
 
                     <div class="d-flex flex-row">
                         <div class="col-6 p-2">
-                            <textarea class="form-control" id="content" name="content"
+                            <textarea class="form-control cool-textarea" id="content" name="content"
                                 style="height: 350px; max-height: 350px;" [(ngModel)]="model.content"></textarea>
                         </div>
 
@@ -39,46 +39,46 @@
                 </div>
 
                 <div class="mt-3">
-                    <label for="featuredImageUrl" class="form-label">Featured Image Url
-                        <button type="button" class="btn btn-light" (click)="openImageSelector()">Select Image</button>
+                    <label for="featuredImageUrl" class="form-label cool-label">Featured Image Url
+                        <button type="button" class="btn btn-light cool-button" (click)="openImageSelector()">Select Image</button>
                     </label>
 
                     <ng-container *ngIf="model.featuredImageUrl != ''">
                         <div>
-                            <img [src]="model.featuredImageUrl" class="my-2" height="100">
+                            <img [src]="model.featuredImageUrl" class="my-2 cool-image" height="100">
                         </div>
                     </ng-container>
 
-                    <input type="text" class="form-control" id="featuredImageUrl" name="featuredImageUrl"
+                    <input type="text" class="form-control cool-input" id="featuredImageUrl" name="featuredImageUrl"
                         [(ngModel)]="model.featuredImageUrl">
                 </div>
 
 
                 <div class="mt-3">
-                    <label for="publishedDate" class="form-label">Published Date</label>
-                    <input type="date" class="form-control" id="publishedDate" name="publishedDate"
+                    <label for="publishedDate" class="form-label cool-label">Published Date</label>
+                    <input type="date" class="form-control cool-input" id="publishedDate" name="publishedDate"
                         value={{model.publishedDate}} [ngModel]="model.publishedDate | date:'yyyy-MM-dd'"
                         (ngModelChange)="model.publishedDate = $event">
                 </div>
 
                 <div class="mt-3">
-                    <label for="author" class="form-label">Author</label>
-                    <input type="text" class="form-control" id="author" name="author" [(ngModel)]="model.author">
+                    <label for="author" class="form-label cool-label">Author</label>
+                    <input type="text" class="form-control cool-input" id="author" name="author" [(ngModel)]="model.author">
                 </div>
 
                 <div class="form-check mt-3">
-                    <input class="form-check-input" type="checkbox" id="isVisible" name="isVisible"
+                    <input class="form-check-input cool-checkbox" type="checkbox" id="isVisible" name="isVisible"
                         [(ngModel)]="model.isVisible">
-                    <label class="form-check-label" for="isVisible">
+                    <label class="form-check-label cool-label" for="isVisible">
                         Is Visible?
                     </label>
                 </div>
 
         <div class="mt-3">
-          <label for="categories" class="form-label">Categories</label>
+          <label for="categories" class="form-label cool-label">Categories</label>
   
           <ng-container *ngIf="categories$ | async as categories">
-            <select class="form-control" id="categories" name="categories" multiple [(ngModel)]="selectedCategories">
+            <select class="form-control cool-select" id="categories" name="categories" multiple [(ngModel)]="selectedCategories">
              <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
             </select>
           </ng-container>
@@ -86,8 +86,8 @@
         </div>
 
                 <div class="mt-3 d-flex">
-                    <button type="submit" class="btn btn-primary">Update Blog</button>
-                    <button class="btn btn-danger ms-3"  (click)="onDelete()">Delete</button>
+                    <button type="submit" class="btn btn-primary cool-button">Update Blog</button>
+                    <button class="btn btn-danger ms-3 cool-button cool-delete-button" (click)="onDelete()">Delete</button>
                 </div>
 
 
@@ -98,6 +98,6 @@
 </div>
 
 <div class="images-container-modal" [ngClass]="{'d-block': imageSelectorVisible, 'd-none': !imageSelectorVisible}">
-    <button type="button" class="btn btn-light" style="position: fixed; top: 10px; right: 10px;" (click)="closeImageSelector()">X</button>
+    <button type="button" class="btn btn-light cool-button" style="position: fixed; top: 10px; right: 10px;" (click)="closeImageSelector()">X</button>
    <app-image-selector></app-image-selector> 
 </div>
