--- a/UI/codepulse/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/UI/codepulse/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -34,7 +34,9 @@
       </div>
 
       <div class="mt-3">
-        <label for="featuredImageUrl" class="form-label">Featured Image Url</label>
+        <label for="featuredImageUrl" class="form-label">Featured Image Url
+          <button type="button" class="btn btn-light cool-button" (click)="openImageSelector()">Select Image</button>
+        </label>
           
         <ng-container *ngIf="model.featuredImageUrl != ''">
           <div>
@@ -83,25 +85,10 @@
     </div>
   </form>
 
+</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<div class="images-container-modal" [ngClass]="{'d-block': imageSelectorVisible, 'd-none': !imageSelectorVisible}">
+  <button type="button" class="btn btn-light cool-button" style="position: fixed; top: 10px; right: 10px;" (click)="closeImageSelector()">X</button>
+ <app-image-selector></app-image-selector> 
 </div>
 
