Create Login Page

--- a/UI/codepulse/src/app/core/components/navbar/navbar.component.html
+++ b/UI/codepulse/src/app/core/components/navbar/navbar.component.html
@@ -23,6 +23,10 @@
 
         </ul>
 
+        <div class="d-flex">
+          <a class="btn btn-primary" [routerLink]="['/login']">Login</a>
+        </div>
+
       </div>
     </div>
   </nav>
