--- a/UI/codepulse/src/app/core/components/navbar/navbar.component.html
+++ b/UI/codepulse/src/app/core/components/navbar/navbar.component.html
@@ -23,9 +23,9 @@
 
         </ul>
 
-        <div class="d-flex">
+        <!-- <div class="d-flex">
           <a class="btn btn-primary" [routerLink]="['/login']">Login</a>
-        </div>
+        </div> -->
 
       </div>
     </div>
