--- a/UI/codepulse/src/app/features/category/category-list/category-list.component.html
+++ b/UI/codepulse/src/app/features/category/category-list/category-list.component.html
@@ -67,5 +67,21 @@
       </table>
   </ng-container>
 
+  <nav aria-label="...">
+    <ul class="pagination">
+      <li class="page-item">
+        <a class="page-link" (click)="getPrevPage()">Previous</a>
+      </li>
+
+      <li *ngFor="let item of list; let index = index" class="page-item">
+        <a class="page-link" (click)="getPage(index + 1)">{{index + 1}}</a>
+      </li>
+    
+      <li class="page-item">
+        <a class="page-link" (click)="getNextPage()">Next</a>
+      </li>
+    </ul>
+  </nav>
+
 
 </div>
