--- a/UI/codepulse/src/app/features/public/home/home.component.html
+++ b/UI/codepulse/src/app/features/public/home/home.component.html
@@ -2,20 +2,21 @@
   <div class="my-5">
      <div class="row align-items-stretch">
        <ng-container *ngIf="blogs$ | async as blogs">
-           <div class="col-12 col-md-4 mb-3" *ngFor="let blog of blogs">
-            <div class="card h-100">
-                <img [src]="blog.featuredImageUrl" class="card-img-top" atl="blog.title">
-                <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">{{blog.title}}</h5>
-                    <p class="card-text">{{blog.shortDescription}}</p>
-                    <span class="d-flex align-items-end" style="flex: 1;">
-                        <a [routerLink]="['/blog', blog.urlHandle]" class="btn btn-primary">Read More</a>
-                    </span>
+           <ng-container *ngFor="let blog of blogs">
+             <div class="col-12 col-md-4 mb-3" *ngIf="blog.isVisible">
+                <div class="card h-100">
+                    <img [src]="blog.featuredImageUrl" class="card-img-top" atl="blog.title">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">{{blog.title}}</h5>
+                        <p class="card-text">{{blog.shortDescription}}</p>
+                        <span class="d-flex align-items-end" style="flex: 1;">
+                            <a [routerLink]="['/blog', blog.urlHandle]" class="btn btn-primary">Read More</a>
+                        </span>
+                    </div>
                 </div>
-            </div>
-           </div>
+             </div>
+           </ng-container>
        </ng-container>
      </div>
   </div>
 </div>
-
